<resources>
    <string name="app_name">GETPG</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FindYoBus</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_me">About me</string>
    <string name="maps">Maps</string>
    <string name="title_activity_register">register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Fullname">Full Name</string>
    <string name="Phoneno">Phone No</string>
    <string name="Address">Address</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
</resources>