<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail1">
    <TextView
        android:id="@+id/DETAILS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:text="AS USER"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FULLNAME"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/Fullname"
        android:inputType="textCapSentences"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"

        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DETAILS"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/PHONENO"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/Phoneno"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FULLNAME"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ADDRESS"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="textCapSentences"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PHONENO"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/Male"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ADDRESS"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/Female"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/ADDRESS"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="93dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="Others"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toEndOf="@+id/radioButton2"
        app:layout_constraintTop_toBottomOf="@+id/ADDRESS"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName|textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"

        android:paddingBottom="10dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPersonName|textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="350dp"
        android:layout_height="52dp"

        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/teal_700"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/alreadyhaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.253"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="345dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ADDRESS"



        />
</androidx.constraintlayout.widget.ConstraintLayout>