<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="409dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".detail2">

        <TextView
            android:id="@+id/DETAILS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:text="AS OWNER"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/FULLNAME"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/Fullname"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DETAILS" />

        <EditText
            android:id="@+id/PHONENO"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:drawableStart="@drawable/baseline_phone_24"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"

            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/Phoneno"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FULLNAME"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00FFFFFF"
            android:text="Rental property Address"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PHONENO" />

        <EditText
            android:id="@+id/houseno"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginTop="56dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_home_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/Address"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PHONENO"
            tools:ignore="InvalidId,MissingConstraints" />


        <EditText
            android:id="@+id/City"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_home_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="City"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/houseno" />

        <EditText
            android:id="@+id/Pincode"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_home_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="Pincode"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/City" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:text="PG For"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/Pincode" />

        <RadioButton
            android:id="@+id/boys"
            android:layout_width="93dp"
            android:layout_height="58dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="52dp"
            android:text="Boys"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toStartOf="@+id/girls"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Pincode" />

        <RadioButton
            android:id="@+id/girls"
            android:layout_width="93dp"
            android:layout_height="58dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="48dp"
            android:text="Girls"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Pincode" />

        <TextView
            android:id="@+id/doypu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="Do you provide tiffin service"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Pincode"
            tools:ignore="MissingConstraints" />

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="Yes"
            android:textColor="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doypu" />

        <RadioButton
            android:id="@+id/no"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="48dp"
            android:text="No"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doypu" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName|textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"

            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rent"
            tools:ignore="MissingConstraints,TextContrastCheck" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_security"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName|textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            tools:ignore="MissingConstraints,TextContrastCheck" />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_security"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPersonName|textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            tools:ignore="MissingConstraints,TextContrastCheck" />

        <EditText
            android:id="@+id/rent"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginTop="260dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_attach_money_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="Rent"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Pincode"
            tools:ignore="MissingConstraints,TextContrastCheck" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="350dp"
            android:layout_height="52dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/teal_700"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:cornerRadius="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/alreadyhaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
